# ilplatinatore-AI

./: .env.example  .gitattributes  .gitignore  .graphify_python  .graphifyignore  ARCHITECTURE.md  BENCH_RESULT.md  EXECUTION_TRACKER.md  README.md  RUNBOOK.md  docker-compose.dev.yml  docker-compose.yml
harvester/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
harvester/scripts/: generate_expanded_seed.py  run_igdb_discovery.py  run_igdb_fetch_guide_links.py  run_igdb_full_discovery.py  run_psn_trophies_all.py  run_steam_achievements_all.py  run_trophy_guides_top20.py  test_single_game.py
harvester/seeds/: expanded_seed.json  top_games.json
harvester/src/collectors/: base.py  exophase.py  fandom.py  fextralife.py  guide_search.py  ign.py  powerpyx.py  psnprofiles.py  pstrophies_org.py  reddit.py  steam_community.py  trophy_section_extractor.py  trueachievements.py  truetrophies.py  youtube.py
harvester/src/config/: __init__.py  db.py  logger.py  redis_client.py  settings.py
harvester/src/discovery/: igdb.py  psn_game_finder.py  psn_trophy_fetcher.py  seed_loader.py  steam_achievement_fetcher.py
harvester/src/injector/: chunker.py  deduplicator.py  embedder.py  upserter.py
harvester/tests/: conftest.py  test_base_collector.py  test_collectors.py  test_discovery.py  test_fandom_collector.py  test_injector.py  test_new_collectors.py  test_pipeline.py  test_powerpyx_collector.py  test_psn_fetcher.py  test_steam_community_collector.py  test_steam_fetcher.py  test_topic_mapper.py  test_transformer.py  test_youtube_collector.py
scripts/: seed.sh  (+1 more)
(+247 files in other folders)
