[project]
name = "il-platinatore-harvester"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "redis>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "structlog>=24.0",
    "pydantic-settings>=2.2",
    "google-genai>=1.0",
    "openai>=1.0",
    "protego>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
